--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
-
+    <title>My Electron App</title>
   </head>
   <body>
     <h1>💖 Hello World!</h1>
